@@ -3,6 +3,7 @@
 using System;
 using System.Collections.Generic;
 using System.Collections.Specialized;
+using System.Globalization;
 using System.IO;
 using System.Xml;
 
@@ -16,20 +17,15 @@ namespace OnTheFlyCompiler.Settings
 		Language,
 		MethodName,
 		MethodPath,
+		Sources,
 		VerboseLevel,
 		WarningLevel
 
 	}
+
 	public class CompilerSettings : System.CodeDom.Compiler.CompilerParameters
 	{
-		Dictionary<string, object> container = new Dictionary<string, object>();
-		StringCollection sources = new StringCollection();
-
-		string language, methodPath, methodName;
-
-		int verbose = 2;
-
-		bool execute = false;
+		ParameterContainer container;
 
 		#region Constructors
 		public CompilerSettings()
@@ -37,7 +33,7 @@ namespace OnTheFlyCompiler.Settings
 			//
 		}
 
-		public CompilerSettings(Dictionary<string, object> container)
+		public CompilerSettings(ParameterContainer container)
 		{
 			this.container = container;
 		}
@@ -48,36 +44,23 @@ namespace OnTheFlyCompiler.Settings
 		{
 			get
 			{
-				return this.execute;
+				object value = this.container[ParameterRole.ExecuteFlag];
+				return (value != null) ? (bool)value : false;
 			}
 			set
 			{
-				this.execute = value;
+				this.container[ParameterRole.ExecuteFlag] = value;
 			}
 		}
 		public string Language
 		{
 			get
 			{
-				return this.language;
+				return container[ParameterRole.Language] as string;
 			}
 			set
 			{
-				this.language = value;
-				this.container["language"] = value;
-			}
-		}
-
-		public string MethodPath
-		{
-			get
-			{
-				return this.methodPath;
-			}
-			set
-			{
-				this.methodPath = value;
-				this.container["map"] = value;
+				container[ParameterRole.Language] = value;
 			}
 		}
 
@@ -85,20 +68,24 @@ namespace OnTheFlyCompiler.Settings
 		{
 			get
 			{
-				return this.methodName;
+				return container[ParameterRole.MethodName] as string;
 			}
 			set
 			{
-				this.methodName = value;
-				this.container["name"] = value;
+				container[ParameterRole.MethodName] = value;
 			}
 		}
 
-		public Dictionary<string, object> SettingsContainer
+
+		public string MethodPath
 		{
 			get
 			{
-				return this.container;
+				return container[ParameterRole.MethodPath] as string;
+			}
+			set
+			{
+				container[ParameterRole.MethodPath] = value;
 			}
 		}
 
@@ -106,7 +93,11 @@ namespace OnTheFlyCompiler.Settings
 		{
 			get
 			{
-				return this.sources;
+				return container[ParameterRole.Sources] as StringCollection;
+			}
+			set
+			{
+				container[ParameterRole.Sources] = value;
 			}
 		}
 
@@ -114,26 +105,157 @@ namespace OnTheFlyCompiler.Settings
 		{
 			get
 			{
-				return this.verbose;
+				object value = this.container[ParameterRole.VerboseLevel];
+				return (value != null) ? (int)value : 2;
 			}
 			set
 			{
-				this.verbose = value;
-				this.container["verbose"] = value;
+				container[ParameterRole.VerboseLevel] = value;
 			}
 		}
 		#endregion
 
 		#region Methods
-		public void Check()
+		public static CompilerSettings Parse(string[] args)
 		{
-			foreach (string name in container.Keys)
+			CompilerSettings settings = new CompilerSettings();
+			for (int i = 0; i < args.Length; i++)
 			{
-				if (container[name] == null)
+				string name = args[i];
+				try
 				{
-					throw new ParameterMissedException(name);
+					switch (name)
+					{
+						case "--debug":
+							{
+								settings.IncludeDebugInformation = true;
+								break;
+							}
+						case "--exe":
+							{
+								settings.GenerateExecutable = true;
+								break;
+							}
+						case "--exec":
+							{
+								settings.Execute = true;
+								break;
+							}
+						case "-f":
+							{
+								string[] arr = args[++i].Split(';');
+								foreach (string str in arr)
+								{
+									settings.Sources.Add(File.ReadAllText(str));
+								}
+								break;
+							}
+						case "-l":
+							{
+								settings.Language = args[++i];
+								break;
+							}
+						case "--memory":
+							{
+								settings.GenerateInMemory = true;
+								break;
+							}
+						case "-n":
+							{
+								settings.MethodName = args[++i];
+								break;
+							}
+						case "-p":
+							{
+								settings.MethodPath = args[++i];
+								break;
+							}
+						case "-r":
+							{
+								string[] arr = args[++i].Split(';');
+								settings.ReferencedAssemblies.AddRange(arr);
+								break;
+							}
+						case "-s":
+							{
+								string[] arr = args[++i].Split(';');
+								settings.Sources.AddRange(arr);
+								break;
+							}
+						case "--threat":
+							{
+								settings.TreatWarningsAsErrors = true;
+								break;
+							}
+						case "-v":
+							{
+								int verbose = Convert.ToInt32(args[++i], CultureInfo.CurrentCulture);
+								if (verbose > 2)
+								{
+									throw new ParameterOutOfRangeException(name, verbose.ToString(CultureInfo.CurrentCulture));
+								}
+								else
+								{
+									settings.Verbose = verbose;
+								}
+								break;
+							}
+						case "-w":
+							{
+								try
+								{
+									int warning = Convert.ToInt32(args[++i], CultureInfo.CurrentCulture);
+									if (warning > 4)
+									{
+										throw new ParameterOutOfRangeException(name, warning.ToString(CultureInfo.CurrentCulture));
+									}
+									else
+									{
+										settings.WarningLevel = warning;
+									}
+								}
+								catch
+								{
+									throw new ParameterNotSetException(name);
+								}
+								break;
+							}
+						case "-x":
+							{
+								try
+								{
+									string xml = String.Empty; ;
+									XmlDocument doc = new XmlDocument();
+									try
+									{
+										xml = args[++i];
+										doc.Load(xml);
+										settings = CompilerSettings.Parse(doc);
+									}
+									catch
+									{
+										throw new ParameterOutOfRangeException(name, xml);
+									}
+								}
+								catch (NullReferenceException ex)
+								{
+									throw new ReadingXmlDescriptionException(ex);
+								}
+
+								break;
+							}
+						default:
+							{
+								throw new UnknownParameterException(name);
+							}
+					}
+				}
+				catch (IndexOutOfRangeException)
+				{
+					throw new ParameterNotSetException(name);
 				}
 			}
+			return settings;
 		}
 
 		public static CompilerSettings Parse(XmlDocument doc)
@@ -145,7 +267,7 @@ namespace OnTheFlyCompiler.Settings
 			XmlAttribute atrLanguage = nodeCompiler.Attributes["language"];
 			if (atrLanguage != null)
 			{
-				settings.language = atrLanguage.Value;
+				settings.Language = atrLanguage.Value;
 			}
 			else
 			{
@@ -162,7 +284,7 @@ namespace OnTheFlyCompiler.Settings
 			XmlAttribute atrPath = nodeMethod.Attributes["path"];
 			if (atrPath != null)
 			{
-				settings.methodPath = atrPath.Value;
+				settings.MethodPath = atrPath.Value;
 			}
 			else
 			{
@@ -171,7 +293,7 @@ namespace OnTheFlyCompiler.Settings
 			XmlAttribute atrName = nodeMethod.Attributes["name"];
 			if (atrName != null)
 			{
-				settings.methodName = atrName.Value;
+				settings.MethodName = atrName.Value;
 			}
 			else
 			{
@@ -185,10 +307,41 @@ namespace OnTheFlyCompiler.Settings
 
 			foreach (XmlNode nodeFile in nodeSettings.SelectNodes("files/item"))
 			{
-				settings.sources.Add(File.ReadAllText(nodeFile.InnerText));
+				settings.Sources.Add(File.ReadAllText(nodeFile.InnerText));
 			}
 
 			return settings;
+		}
+		#endregion
+	}
+
+	public class ParameterContainer : Dictionary<ParameterRole, object>
+	{
+		#region Operators
+		public new object this[ParameterRole role]
+		{
+			get
+			{
+				if (base.ContainsKey(role))
+				{
+					return base[role];
+				}
+				else
+				{
+					return null; ;
+				}
+			}
+			set
+			{
+				if (base.ContainsKey(role))
+				{
+					base[role] = value;
+				}
+				else
+				{
+					base.Add(role, value);
+				}
+			}
 		}
 		#endregion
 	}
