@@ -1,6 +1,7 @@
 On-the-Fly .NET Compiler Project Changelog:
 
 2.0.2 (-)
+[+] ParameterContainer is moved to CompilerSettings, which is a proxy between it and named setting properties
 
 2.0.1 (2008.12.24)
 [+] Public preview release as open source project
